before loginfo, loss go NAN

--- a/ref/gpt.ipynb
+++ b/ref/gpt.ipynb
@@ -243,16 +243,16 @@
    "source": [
     "from torch.autograd import Variable\n",
     "for step, batch in enumerate(train_dataloader):\n",
-    "    print(\"STEP:\",step+1,'\\tbatch len:',len(batch))\n",
-    "    # print(batch[-1])\n",
+    "    # print(\"STEP:\",step+1,'\\tbatch len:',len(batch))\n",
+    "    # # print(batch[-1])\n",
     "\n",
     "    # Input and its attentions\n",
     "    article_bart = Variable(batch[0], requires_grad=False).cuda()\n",
-    "    # print(batch[0])\n",
+    "    # # print(batch[0])\n",
     "    article_bart_attn = Variable(batch[1], requires_grad=False).cuda()    \n",
-    "    print(batch[0].shape)\n",
+    "    # print(batch[0].shape)\n",
     "    output =bart_tokenizer.batch_decode(bart.generate(article_bart))\n",
-    "    print(len(output[0]))\n",
+    "    # print(len(output[0]))\n",
     "    # break"
    ]
   },
@@ -505,7 +505,7 @@
    "source": [
     "input_ids = tokenizer('translate English to French: I am doing project on Thanksgiving.I am doing project on Thanksgiving.I am doing project on Thanksgiving.I am doing project on Thanksgiving.I am doing project on Thanksgiving.I am doing project on Thanksgiving.I am doing project on Thanksgiving.I am doing project on Thanksgiving.', return_tensors='pt').input_ids\n",
     "outputs = model.generate(input_ids)\n",
-    "print(tokenizer.decode(outputs[0], skip_special_tokens=True))"
+    "# print(tokenizer.decode(outputs[0], skip_special_tokens=True))"
    ]
   },
   {
@@ -661,7 +661,7 @@
       "        >>> model = AutoModelForCausalLM.from_pretrained(\"distilgpt2\")\n",
       "        >>> # do greedy decoding without providing a prompt\n",
       "        >>> outputs = model.generate(max_length=40)\n",
-      "        >>> print(\"Generated:\", tokenizer.decode(outputs[0], skip_special_tokens=True))\n",
+      "        >>> # print(\"Generated:\", tokenizer.decode(outputs[0], skip_special_tokens=True))\n",
       "    \n",
       "        >>> tokenizer = AutoTokenizer.from_pretrained(\"t5-base\")\n",
       "        >>> model = AutoModelForSeq2SeqLM.from_pretrained(\"t5-base\")\n",
@@ -674,7 +674,7 @@
       "        >>> # generate 3 independent sequences using beam search decoding (5 beams)\n",
       "        >>> # with T5 encoder-decoder model conditioned on short news article.\n",
       "        >>> outputs = model.generate(input_ids=input_ids, num_beams=5, num_return_sequences=3)\n",
-      "        >>> print(\"Generated:\", tokenizer.batch_decode(outputs, skip_special_tokens=True))\n",
+      "        >>> # print(\"Generated:\", tokenizer.batch_decode(outputs, skip_special_tokens=True))\n",
       "    \n",
       "        >>> tokenizer = AutoTokenizer.from_pretrained(\"distilgpt2\")\n",
       "        >>> model = AutoModelForCausalLM.from_pretrained(\"distilgpt2\")\n",
@@ -683,7 +683,7 @@
       "        >>> input_ids = tokenizer(input_context, return_tensors=\"pt\").input_ids\n",
       "        >>> # generate 3 candidates using sampling\n",
       "        >>> outputs = model.generate(input_ids=input_ids, max_length=20, num_return_sequences=3, do_sample=True)\n",
-      "        >>> print(\"Generated:\", tokenizer.batch_decode(outputs, skip_special_tokens=True))\n",
+      "        >>> # print(\"Generated:\", tokenizer.batch_decode(outputs, skip_special_tokens=True))\n",
       "    \n",
       "        >>> tokenizer = AutoTokenizer.from_pretrained(\"ctrl\")\n",
       "        >>> model = AutoModelForCausalLM.from_pretrained(\"ctrl\")\n",
@@ -692,7 +692,7 @@
       "        >>> # encode input context\n",
       "        >>> input_ids = tokenizer(input_context, return_tensors=\"pt\").input_ids\n",
       "        >>> outputs = model.generate(input_ids=input_ids, max_length=20, repetition_penalty=1.2)\n",
-      "        >>> print(\"Generated:\", tokenizer.decode(outputs[0], skip_special_tokens=True))\n",
+      "        >>> # print(\"Generated:\", tokenizer.decode(outputs[0], skip_special_tokens=True))\n",
       "    \n",
       "        >>> tokenizer = AutoTokenizer.from_pretrained(\"gpt2\")\n",
       "        >>> model = AutoModelForCausalLM.from_pretrained(\"gpt2\")\n",
@@ -703,7 +703,7 @@
       "        >>> input_ids = tokenizer(input_context, return_tensors=\"pt\").input_ids\n",
       "        >>> # generate sequences without allowing bad_words to be generated\n",
       "        >>> outputs = model.generate(input_ids=input_ids, max_length=20, do_sample=True, bad_words_ids=bad_words_ids)\n",
-      "        >>> print(\"Generated:\", tokenizer.decode(outputs[0], skip_special_tokens=True))\n",
+      "        >>> # print(\"Generated:\", tokenizer.decode(outputs[0], skip_special_tokens=True))\n",
       "\n"
      ]
     }
@@ -860,7 +860,7 @@
     "import numpy as np\n",
     "\n",
     "x = np.zeros((20,20))\n",
-    "print(x)\n",
+    "# print(x)\n",
     "x[:,:15].shape"
    ]
   },
